# ngfw_matcher

./: .dockerignore  .gitignore  BACKLOG.md  CHANGELOG.md  Dockerfile  README.md  VERSION  __main__.py  __version.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
cli/: builder.py  commands.py  main.py  output.py
core/: export.py  format.py  matcher.py  models.py  nat_audit.py  resolver.py  rule_compare.py  snapshot.py  utils.py
sources/: backend_api.py  ngfw_api.py
web/: db.py  deps.py  main.py  state.py
web/routers/: auth.py  compare.py  devices.py  find.py  fullview.py  hits.py  match.py  nat.py  shadows.py  snapshot.py
web/static/css/: tailwind.css
web/templates/: connect.html  find_rule.html  fullview.html  hits.html  index.html  layout.html  match.html  nat.html  no_device.html  shadows.html  snapshot.html
web/templates/partials/: device_status_box.html  device_tree_rows.html  error.html  find_results.html  fullview_result.html  hits_table.html  match_result.html  match_results.html  nat_result.html  rule_compare.html  shadows_progress.html  shadows_result.html  sync_status.html
