[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ngfw-matcher"
version = "2.4.0"
requires-python = ">=3.11"
dependencies = ["requests"]

[project.optional-dependencies]
web = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "itsdangerous>=2.1",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2",
]

[project.scripts]
ngfw-matcher = "ngfw_matcher.cli.main:main"
ngfw-matcher-web = "ngfw_matcher.web.main:serve"

[tool.setuptools.packages.find]
where = [".."]
include = ["ngfw_matcher*"]
